force-app/main/default/objects/CMCAssociation__c/CMCAssociation__c.object-meta.xml
<CustomObject>
    <description>The junction that connects Client Member Code records to Program Overview records (CMC to Contract object) and Registration Code records (CMC to CMC)</description>
    <label>CMC Association</label>
    <nameField>
        <displayFormat>CMCA-{000000}</displayFormat>
        <label>CMC Association ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CMC Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>