force-app/main/default/objects/CMCAssociation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account to which the Client Member Code is associated</description>
    <inlineHelpText>The account to which the Client Member Code is associated</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>CMC Associations</relationshipLabel>
    <relationshipName>CMC_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>