force-app/main/default/objects/CMCAssociation__c/fields/Client_Member_Code_Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Member_Code_Client_Account__c</fullName>
    <formula>ClientMemberCode__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Member Code: Client Account</label>
    <type>Text</type>
</CustomField>