force-app/main/default/objects/CMCAssociation__c/fields/ClientMemberCode__c.field-meta.xml
<CustomField>
    <fullName>ClientMemberCode__c</fullName>
    <description>The parent Client Member Code associated to either the Registration Code or the Program Overview</description>
    <label>Client Member Code</label>
    <referenceTo>ClientMemberCode__c</referenceTo>
    <relationshipLabel>CMC Associations</relationshipLabel>
    <relationshipName>CMC_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>