force-app/main/default/objects/CMCAssociation__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>The code from the master Client Member Code record</description>
    <formula>ClientMemberCode__r.ClientMemberCode__c</formula>
    <inlineHelpText>The code from the master Client Member Code record</inlineHelpText>
    <label>Code</label>
    <type>Text</type>
</CustomField>