force-app/main/default/objects/CMCAssociation__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <formula>TEXT(ProgramOverview__r.Program_Name__c)</formula>
    <label>Program Name</label>
    <type>Text</type>
</CustomField>