force-app/main/default/objects/CMCAssociation__c/fields/Program_Number_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Program_Number_Hyperlink__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; ProgramOverview__r.Id, ProgramOverview__r.ContractNumber__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Number</label>
    <type>Text</type>
</CustomField>