force-app/main/default/objects/CMCAssociation__c/fields/Program_Overview_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Overview_Name__c</fullName>
    <formula>ProgramOverview__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Overview Name</label>
    <type>Text</type>
</CustomField>