force-app/main/default/objects/CMCAssociation__c/fields/ProgramOverview__c.field-meta.xml
<CustomField>
    <fullName>ProgramOverview__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Program Overview associated to the parent Client Member Code</description>
    <inlineHelpText>The Program Overview associated to the parent Client Member Code</inlineHelpText>
    <label>Program Overview</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Program Overview Associations</relationshipLabel>
    <relationshipName>Program_Overview_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>