force-app/main/default/objects/CMCAssociation__c/fields/RegistrationCode__c.field-meta.xml
<CustomField>
    <fullName>RegistrationCode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Registration Code associated to the parent Client Member Code</description>
    <label>Registration Only Code</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only associate Registration Code CMCs to the Population Code CMCs.</errorMessage>
        <filterItems>
            <field>ClientMemberCode__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Registration Only</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ClientMemberCode__c</referenceTo>
    <relationshipLabel>Registration Only Associations</relationshipLabel>
    <relationshipName>RegistrationOnly</relationshipName>
    <type>Lookup</type>
</CustomField>