force-app/main/default/objects/CMCAssociation__c/recordTypes/CMC_to_Program.recordType-meta.xml
<RecordType>
    <fullName>CMC_to_Program</fullName>
    <active>true</active>
    <label>CMC to Program</label>
</RecordType>