force-app/main/default/objects/CMCAssociation__c/recordTypes/CMC_to_Registration.recordType-meta.xml
<RecordType>
    <fullName>CMC_to_Registration</fullName>
    <active>true</active>
    <label>CMC to Registration</label>
</RecordType>